--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:11:25 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:12:08 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -308,9 +308,9 @@ Not started</td>
 +1 thru 2</td>
       <td>Hideki Matsuyama E
 E thru 1</td>
-      <td>Jordan Spieth +1
--1 thru 11</td>
-      <td class="greyout leftborder">Will Zalatoris +1
+      <td>Will Zalatoris +1
++2 thru 12</td>
+      <td class="greyout leftborder">Jordan Spieth +4
 +2 thru 12</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 12</td>
@@ -444,38 +444,6 @@ E thru 12</td>
 +4 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunrises</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith -3
-+1 thru 2</td>
-      <td>Corey Conners(W) -1
-+1 (F)</td>
-      <td>Jordan Spieth +1
--1 thru 11</td>
-      <td>Will Zalatoris +1
-+2 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm +2
-E thru 12</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 11</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Wilson</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler(W) -3
-Not started</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Jordan Spieth +1
--1 thru 11</td>
-      <td>Will Zalatoris +1
-+2 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm +2
-E thru 12</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 12</td>
-    </tr>
-    <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
       <td class="bigbold">-2</td>
       <td>Dustin Johnson(W) -2
@@ -486,26 +454,10 @@ Not started</td>
 +1 thru 11</td>
       <td>Shane Lowry +1
 E thru 3</td>
-      <td class="greyout leftborder">Jordan Spieth +1
--1 thru 11</td>
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 12</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Stan and Ollie Garch</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Shane Lowry +1
-E thru 3</td>
-      <td>Jordan Spieth +1
--1 thru 11</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 11</td>
-      <td class="greyout">Justin Thomas(W) +4
-E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Baggy Pants</td>
@@ -524,100 +476,36 @@ E thru 11</td>
 E thru 1</td>
     </tr>
     <tr>
-      <td class="bigbold">Neville Spillman</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Patrick Cantlay -2
-E thru 12</td>
-      <td>Jordan Spieth(W) +1
--1 thru 11</td>
+      <td class="bigbold">Santorini Sunrises</td>
+      <td class="bigbold">-1</td>
+      <td>Cameron Smith -3
++1 thru 2</td>
+      <td>Corey Conners(W) -1
++1 (F)</td>
+      <td>Will Zalatoris +1
++2 thru 12</td>
       <td>Jon Rahm +2
 E thru 12</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 11</td>
-      <td class="greyout">Sam Burns +5
-+2 thru 14</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">-2</td>
-      <td>Patrick Cantlay -2
-E thru 12</td>
-      <td>Tony Finau -1
-Not started</td>
-      <td>Collin Morikawa E
--1 thru 13</td>
-      <td>Jordan Spieth +1
--1 thru 11</td>
-      <td class="greyout leftborder">Jon Rahm(W) +2
-E thru 12</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 11</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">-1</td>
-      <td>Patrick Cantlay -2
-E thru 12</td>
-      <td>Dustin Johnson -2
-+1 thru 13</td>
-      <td>Jordan Spieth +1
--1 thru 11</td>
-      <td>Viktor Hovland +2
+      <td class="greyout">Jordan Spieth +4
 +2 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm +2
-E thru 12</td>
-      <td class="greyout">Rory McIlroy(W) +4
-+3 thru 11</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">Matt Wilson</td>
       <td class="bigbold">-1</td>
-      <td>Patrick Cantlay -2
-E thru 12</td>
-      <td>Collin Morikawa(W) E
--1 thru 13</td>
-      <td>Hideki Matsuyama E
-E thru 1</td>
-      <td>Jordan Spieth +1
--1 thru 11</td>
-      <td class="greyout leftborder">Jon Rahm +2
-E thru 12</td>
-      <td class="greyout">Paul Casey
-Out With Injury</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Philip Dale</td>
-      <td class="bigbold">-1</td>
-      <td>Scottie Scheffler -3
+      <td>Scottie Scheffler(W) -3
 Not started</td>
-      <td>Patrick Cantlay -2
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Will Zalatoris +1
++2 thru 12</td>
+      <td>Jon Rahm +2
 E thru 12</td>
-      <td>Jordan Spieth +1
--1 thru 11</td>
-      <td>Brooks Koepka +3
-E thru 11</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-E thru 1</td>
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 12</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-1</td>
-      <td>Corey Conners(W) -1
-+1 (F)</td>
-      <td>Daniel Berger -1
-E thru 2</td>
-      <td>Collin Morikawa E
--1 thru 13</td>
-      <td>Jordan Spieth +1
--1 thru 11</td>
-      <td class="greyout leftborder">Robert MacIntyre +2
-+1 (F)</td>
-      <td class="greyout">Jon Rahm +2
-E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Barb Wellard</td>
@@ -632,22 +520,6 @@ E thru 12</td>
 E thru 11</td>
       <td class="greyout leftborder">Sam Burns +5
 +2 thru 14</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-1</td>
-      <td>Cameron Smith(W) -3
-+1 thru 2</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Jordan Spieth +1
--1 thru 11</td>
-      <td>Viktor Hovland +2
-+2 thru 12</td>
-      <td class="greyout leftborder">Justin Thomas +4
-E thru 1</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 12</td>
     </tr>
@@ -700,22 +572,6 @@ E thru 11</td>
 E thru 1</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">-1</td>
-      <td>Patrick Cantlay -2
-E thru 12</td>
-      <td>Dustin Johnson -2
-+1 thru 13</td>
-      <td>Jordan Spieth(W) +1
--1 thru 11</td>
-      <td>Viktor Hovland +2
-+2 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm +2
-E thru 12</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 11</td>
-    </tr>
-    <tr>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">-1</td>
       <td>Joaquin Niemann -3
@@ -728,6 +584,118 @@ E thru 3</td>
 +2 thru 12</td>
       <td class="greyout leftborder">Brian Harman +3
 +1 thru 6</td>
+      <td class="greyout">Sam Burns +5
++2 thru 14</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">-1</td>
+      <td>Patrick Cantlay -2
+E thru 12</td>
+      <td>Tony Finau -1
+Not started</td>
+      <td>Collin Morikawa E
+-1 thru 13</td>
+      <td>Jon Rahm(W) +2
+E thru 12</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 11</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Lorette Hosegood</td>
+      <td class="bigbold">0</td>
+      <td>Patrick Cantlay -2
+E thru 12</td>
+      <td>Dustin Johnson -2
++1 thru 13</td>
+      <td>Viktor Hovland +2
++2 thru 12</td>
+      <td>Jon Rahm +2
+E thru 12</td>
+      <td class="greyout leftborder">Rory McIlroy(W) +4
++3 thru 11</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">0</td>
+      <td>Patrick Cantlay -2
+E thru 12</td>
+      <td>Collin Morikawa(W) E
+-1 thru 13</td>
+      <td>Hideki Matsuyama E
+E thru 1</td>
+      <td>Jon Rahm +2
+E thru 12</td>
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 12</td>
+      <td class="greyout">Paul Casey
+Out With Injury</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">0</td>
+      <td>Corey Conners(W) -1
++1 (F)</td>
+      <td>Daniel Berger -1
+E thru 2</td>
+      <td>Collin Morikawa E
+-1 thru 13</td>
+      <td>Robert MacIntyre +2
++1 (F)</td>
+      <td class="greyout leftborder">Jon Rahm +2
+E thru 12</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Stan and Ollie Garch</td>
+      <td class="bigbold">0</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Shane Lowry +1
+E thru 3</td>
+      <td>Brooks Koepka +3
+E thru 11</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
+E thru 1</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">0</td>
+      <td>Patrick Cantlay -2
+E thru 12</td>
+      <td>Dustin Johnson -2
++1 thru 13</td>
+      <td>Viktor Hovland +2
++2 thru 12</td>
+      <td>Jon Rahm +2
+E thru 12</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 11</td>
+      <td class="greyout">Jordan Spieth(W) +4
++2 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neville Spillman</td>
+      <td class="bigbold">0</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Patrick Cantlay -2
+E thru 12</td>
+      <td>Jon Rahm +2
+E thru 12</td>
+      <td>Brooks Koepka +3
+E thru 11</td>
+      <td class="greyout leftborder">Jordan Spieth(W) +4
++2 thru 12</td>
       <td class="greyout">Sam Burns +5
 +2 thru 14</td>
     </tr>
@@ -780,22 +748,6 @@ E thru 1</td>
 +4 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">1</td>
-      <td>Patrick Cantlay -2
-E thru 12</td>
-      <td>Hideki Matsuyama E
-E thru 1</td>
-      <td>Jordan Spieth +1
--1 thru 11</td>
-      <td>Jon Rahm(W) +2
-E thru 12</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 11</td>
-      <td class="greyout">Justin Thomas +4
-E thru 1</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jack Fleck</td>
       <td class="bigbold">1</td>
       <td>Cameron Smith -3
@@ -812,34 +764,18 @@ E thru 1</td>
 +4 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">NewCastle Magpies</td>
-      <td class="bigbold">2</td>
-      <td>Patrick Cantlay -2
-E thru 12</td>
-      <td>Collin Morikawa E
--1 thru 13</td>
-      <td>Jordan Spieth +1
--1 thru 11</td>
-      <td>Brooks Koepka +3
-E thru 11</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-E thru 1</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">Philip Dale</td>
       <td class="bigbold">2</td>
       <td>Scottie Scheffler -3
 Not started</td>
-      <td>Jordan Spieth +1
--1 thru 11</td>
-      <td>Jon Rahm(W) +2
+      <td>Patrick Cantlay -2
 E thru 12</td>
-      <td>Viktor Hovland +2
-+2 thru 12</td>
-      <td class="greyout leftborder">Brooks Koepka +3
+      <td>Brooks Koepka +3
 E thru 11</td>
+      <td>Justin Thomas(W) +4
+E thru 1</td>
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 12</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 12</td>
     </tr>
@@ -860,20 +796,36 @@ E thru 11</td>
 +4 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Glitter Girl</td>
+      <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">2</td>
-      <td>Cameron Smith -3
+      <td>Cameron Smith(W) -3
 +1 thru 2</td>
-      <td>Jordan Spieth +1
--1 thru 11</td>
-      <td>Jon Rahm(W) +2
-E thru 12</td>
+      <td>Corey Conners -1
++1 (F)</td>
       <td>Viktor Hovland +2
 +2 thru 12</td>
-      <td class="greyout leftborder">Bubba Watson +2
-+1 thru 16</td>
-      <td class="greyout">Rory McIlroy +4
-+3 thru 11</td>
+      <td>Jordan Spieth +4
++2 thru 12</td>
+      <td class="greyout leftborder">Justin Thomas +4
+E thru 1</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">3</td>
+      <td>Patrick Cantlay -2
+E thru 12</td>
+      <td>Hideki Matsuyama E
+E thru 1</td>
+      <td>Jon Rahm(W) +2
+E thru 12</td>
+      <td>Brooks Koepka +3
+E thru 11</td>
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 12</td>
+      <td class="greyout">Justin Thomas +4
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Ez Game Ez Life</td>
@@ -892,6 +844,38 @@ E thru 12</td>
 E thru 1</td>
     </tr>
     <tr>
+      <td class="bigbold">Glitter Girl</td>
+      <td class="bigbold">3</td>
+      <td>Cameron Smith -3
++1 thru 2</td>
+      <td>Jon Rahm(W) +2
+E thru 12</td>
+      <td>Viktor Hovland +2
++2 thru 12</td>
+      <td>Bubba Watson +2
++1 thru 16</td>
+      <td class="greyout leftborder">Rory McIlroy +4
++3 thru 11</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">4</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Jon Rahm(W) +2
+E thru 12</td>
+      <td>Viktor Hovland +2
++2 thru 12</td>
+      <td>Brooks Koepka +3
+E thru 11</td>
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 12</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 12</td>
+    </tr>
+    <tr>
       <td class="bigbold">Fred Jamieson</td>
       <td class="bigbold">4</td>
       <td>Scottie Scheffler -3
@@ -908,20 +892,20 @@ E thru 11</td>
 +4 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">NewCastle Magpies</td>
       <td class="bigbold">5</td>
+      <td>Patrick Cantlay -2
+E thru 12</td>
       <td>Collin Morikawa E
 -1 thru 13</td>
-      <td>Jordan Spieth +1
--1 thru 11</td>
-      <td>Viktor Hovland(W) +2
-+2 thru 12</td>
-      <td>Jon Rahm +2
-E thru 12</td>
-      <td class="greyout leftborder">Brooks Koepka +3
+      <td>Brooks Koepka +3
 E thru 11</td>
-      <td class="greyout">Patrick Reed +3
-+1 thru 17</td>
+      <td>Justin Thomas(W) +4
+E thru 1</td>
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 12</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Jabby</td>
@@ -956,22 +940,6 @@ E thru 1</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">6</td>
-      <td>Jordan Spieth +1
--1 thru 11</td>
-      <td>Will Zalatoris +1
-+2 thru 12</td>
-      <td>Viktor Hovland +2
-+2 thru 12</td>
-      <td>Jon Rahm +2
-E thru 12</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-E thru 1</td>
-      <td class="greyout">Sam Burns +5
-+2 thru 14</td>
-    </tr>
-    <tr>
       <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">6</td>
       <td>Collin Morikawa(W) E
@@ -988,36 +956,20 @@ E thru 1</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">6</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Jordan Spieth +1
--1 thru 11</td>
-      <td>Jon Rahm(W) +2
-E thru 12</td>
-      <td>Rory McIlroy +4
-+3 thru 11</td>
-      <td class="greyout leftborder">Justin Thomas +4
-E thru 1</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">6</td>
-      <td>Jordan Spieth +1
--1 thru 11</td>
-      <td>Will Zalatoris +1
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">7</td>
+      <td>Collin Morikawa E
+-1 thru 13</td>
+      <td>Viktor Hovland(W) +2
 +2 thru 12</td>
-      <td>Jon Rahm(W) +2
+      <td>Jon Rahm +2
 E thru 12</td>
-      <td>Viktor Hovland +2
-+2 thru 12</td>
-      <td class="greyout leftborder">Brooks Koepka +3
+      <td>Brooks Koepka +3
 E thru 11</td>
-      <td class="greyout">Justin Thomas +4
-E thru 1</td>
+      <td class="greyout leftborder">Patrick Reed +3
++1 thru 17</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
@@ -1036,36 +988,52 @@ E thru 1</td>
 +4 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Yellow in Augusta</td>
+      <td class="bigbold">Kash Ahmad</td>
       <td class="bigbold">8</td>
-      <td>Jordan Spieth +1
--1 thru 11</td>
+      <td>Will Zalatoris +1
++2 thru 12</td>
+      <td>Jon Rahm(W) +2
+E thru 12</td>
       <td>Viktor Hovland +2
 +2 thru 12</td>
-      <td>Jon Rahm +2
-E thru 12</td>
       <td>Brooks Koepka +3
 E thru 11</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 12</td>
+      <td class="greyout">Justin Thomas +4
 E thru 1</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Bryan Francis</td>
+      <td class="bigbold">Glen Wilson</td>
       <td class="bigbold">9</td>
-      <td>Jordan Spieth +1
--1 thru 11</td>
+      <td>Will Zalatoris +1
++2 thru 12</td>
       <td>Viktor Hovland +2
 +2 thru 12</td>
       <td>Jon Rahm +2
 E thru 12</td>
       <td>Justin Thomas(W) +4
 E thru 1</td>
-      <td class="greyout leftborder">Xander Schauffele +6
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 12</td>
+      <td class="greyout">Sam Burns +5
++2 thru 14</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">9</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Jon Rahm(W) +2
+E thru 12</td>
+      <td>Rory McIlroy +4
++3 thru 11</td>
+      <td>Jordan Spieth +4
++2 thru 12</td>
+      <td class="greyout leftborder">Justin Thomas +4
+E thru 1</td>
+      <td class="greyout">Xander Schauffele +6
 +4 thru 12</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Benjac</td>
@@ -1094,6 +1062,38 @@ E thru 12</td>
 E thru 11</td>
       <td>Justin Thomas +4
 E thru 1</td>
+      <td class="greyout leftborder">Xander Schauffele +6
++4 thru 12</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Yellow in Augusta</td>
+      <td class="bigbold">11</td>
+      <td>Viktor Hovland +2
++2 thru 12</td>
+      <td>Jon Rahm +2
+E thru 12</td>
+      <td>Brooks Koepka +3
+E thru 11</td>
+      <td>Justin Thomas(W) +4
+E thru 1</td>
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 12</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Bryan Francis</td>
+      <td class="bigbold">12</td>
+      <td>Viktor Hovland +2
++2 thru 12</td>
+      <td>Jon Rahm +2
+E thru 12</td>
+      <td>Justin Thomas(W) +4
+E thru 1</td>
+      <td>Jordan Spieth +4
++2 thru 12</td>
       <td class="greyout leftborder">Xander Schauffele +6
 +4 thru 12</td>
       <td class="greyout">Louis Oosthuizen
