--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:11:25 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:12:08 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -139,22 +139,6 @@ body {
   </tr>
   </thead>
   <tbody>
-    <tr>
-      <td class="bigbold">Larry Judge</td>
-      <td class="bigbold">-6</td>
-      <td>Scottie Scheffler(W) -3
-Not started</td>
-      <td>Cameron Smith -3
-+1 thru 2</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Jordan Spieth +1
--1 thru 11</td>
-      <td class="greyout leftborder">Sam Burns +5
-+2 thru 14</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 12</td>
-    </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-5</td>
@@ -170,6 +154,22 @@ Not started</td>
 E thru 3</td>
       <td class="greyout">Justin Thomas(W) +4
 E thru 1</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Larry Judge</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler(W) -3
+Not started</td>
+      <td>Cameron Smith -3
++1 thru 2</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Jordan Spieth +4
++2 thru 12</td>
+      <td class="greyout leftborder">Sam Burns +5
++2 thru 14</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -236,22 +236,6 @@ E thru 11</td>
 +4 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">-2</td>
-      <td>Patrick Cantlay -2
-E thru 12</td>
-      <td>Tony Finau -1
-Not started</td>
-      <td>Collin Morikawa E
--1 thru 13</td>
-      <td>Jordan Spieth +1
--1 thru 11</td>
-      <td class="greyout leftborder">Jon Rahm(W) +2
-E thru 12</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 11</td>
-    </tr>
-    <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-1</td>
       <td>Tony Finau -1
@@ -284,68 +268,84 @@ E thru 11</td>
 E thru 1</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">-1</td>
+      <td>Patrick Cantlay -2
+E thru 12</td>
+      <td>Tony Finau -1
+Not started</td>
+      <td>Collin Morikawa E
+-1 thru 13</td>
+      <td>Jon Rahm(W) +2
+E thru 12</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 11</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">0</td>
       <td>Corey Conners(W) -1
 +1 (F)</td>
       <td>Daniel Berger -1
 E thru 2</td>
       <td>Collin Morikawa E
 -1 thru 13</td>
-      <td>Jordan Spieth +1
--1 thru 11</td>
-      <td class="greyout leftborder">Jon Rahm +2
+      <td>Jon Rahm +2
 E thru 12</td>
-      <td class="greyout">Robert MacIntyre +2
+      <td class="greyout leftborder">Robert MacIntyre +2
 +1 (F)</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">0</td>
       <td>Patrick Cantlay -2
 E thru 12</td>
       <td>Dustin Johnson -2
 +1 thru 13</td>
-      <td>Jordan Spieth(W) +1
--1 thru 11</td>
       <td>Viktor Hovland +2
 +2 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm +2
+      <td>Jon Rahm +2
 E thru 12</td>
-      <td class="greyout">Brooks Koepka +3
+      <td class="greyout leftborder">Brooks Koepka +3
 E thru 11</td>
+      <td class="greyout">Jordan Spieth(W) +4
++2 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">1</td>
+      <td>Scottie Scheffler(W) -3
+Not started</td>
+      <td>Will Zalatoris +1
++2 thru 12</td>
+      <td>Shane Lowry +1
+E thru 3</td>
+      <td>Jon Rahm +2
+E thru 12</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 11</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">2</td>
       <td>Cameron Smith(W) -3
 +1 thru 2</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Jordan Spieth +1
--1 thru 11</td>
       <td>Viktor Hovland +2
++2 thru 12</td>
+      <td>Jordan Spieth +4
 +2 thru 12</td>
       <td class="greyout leftborder">Justin Thomas +4
 E thru 1</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">0</td>
-      <td>Scottie Scheffler(W) -3
-Not started</td>
-      <td>Jordan Spieth +1
--1 thru 11</td>
-      <td>Will Zalatoris +1
-+2 thru 12</td>
-      <td>Shane Lowry +1
-E thru 3</td>
-      <td class="greyout leftborder">Jon Rahm +2
-E thru 12</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
@@ -359,22 +359,6 @@ E thru 11</td>
       <td>Justin Thomas +4
 E thru 1</td>
       <td class="greyout leftborder">Xander Schauffele(W) +6
-+4 thru 12</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">6</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Jordan Spieth +1
--1 thru 11</td>
-      <td>Jon Rahm +2
-E thru 12</td>
-      <td>Justin Thomas(W) +4
-E thru 1</td>
-      <td class="greyout leftborder">Xander Schauffele +6
 +4 thru 12</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
@@ -394,6 +378,22 @@ E thru 11</td>
 +1 thru 17</td>
       <td class="greyout">Luke List +5
 E thru 4</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Adam Ryan</td>
+      <td class="bigbold">9</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Jon Rahm +2
+E thru 12</td>
+      <td>Justin Thomas(W) +4
+E thru 1</td>
+      <td>Jordan Spieth +4
++2 thru 12</td>
+      <td class="greyout leftborder">Xander Schauffele +6
++4 thru 12</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
     </tr>
   </tbody>
 </table>
