--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:12:08 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:12:51 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -376,8 +376,8 @@ E thru 12</td>
 E thru 11</td>
       <td class="greyout leftborder">Patrick Reed +3
 +1 thru 17</td>
-      <td class="greyout">Luke List +5
-E thru 4</td>
+      <td class="greyout">Luke List +6
++1 thru 5</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
