--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:17:11 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:17:54 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -172,6 +172,38 @@ E thru 14</td>
 +2 thru 14</td>
     </tr>
     <tr>
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith(W) -3
++1 thru 2</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Will Zalatoris E
++1 thru 13</td>
+      <td class="greyout leftborder">Russell Henley +3
++2 (F)</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 11</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Mark MacKave</td>
+      <td class="bigbold">-7</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Cameron Smith -3
++1 thru 2</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Will Zalatoris E
++1 thru 13</td>
+      <td class="greyout leftborder">Viktor Hovland +2
++2 thru 12</td>
+      <td class="greyout">Xander Schauffele(W) +6
++4 thru 12</td>
+    </tr>
+    <tr>
       <td class="bigbold">Tom Davis</td>
       <td class="bigbold">-7</td>
       <td>Cameron Smith -3
@@ -204,6 +236,22 @@ E thru 11</td>
 +4 thru 12</td>
     </tr>
     <tr>
+      <td class="bigbold">Doug Muir</td>
+      <td class="bigbold">-6</td>
+      <td>Scottie Scheffler(W) -3
+Not started</td>
+      <td>Cameron Smith -3
++1 thru 2</td>
+      <td>Hideki Matsuyama E
+E thru 1</td>
+      <td>Will Zalatoris E
++1 thru 13</td>
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 12</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 12</td>
+    </tr>
+    <tr>
       <td class="bigbold">Team Steve</td>
       <td class="bigbold">-6</td>
       <td>Cameron Smith(W) -3
@@ -220,52 +268,36 @@ E thru 4</td>
 E thru 11</td>
     </tr>
     <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith(W) -3
-+1 thru 2</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Will Zalatoris +1
-+2 thru 12</td>
-      <td class="greyout leftborder">Russell Henley +3
-+2 (F)</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 11</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Mark MacKave</td>
-      <td class="bigbold">-6</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Cameron Smith -3
-+1 thru 2</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Will Zalatoris +1
-+2 thru 12</td>
-      <td class="greyout leftborder">Viktor Hovland +2
-+2 thru 12</td>
-      <td class="greyout">Xander Schauffele(W) +6
-+4 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Doug Muir</td>
+      <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-5</td>
-      <td>Scottie Scheffler(W) -3
+      <td>Scottie Scheffler -3
 Not started</td>
+      <td>Patrick Cantlay -1
++1 thru 13</td>
+      <td>Tony Finau -1
+Not started</td>
+      <td>Will Zalatoris E
++1 thru 13</td>
+      <td class="greyout leftborder">Shane Lowry +1
+E thru 4</td>
+      <td class="greyout">Justin Thomas(W) +4
+E thru 1</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Hadrian&#39;s Wall</td>
+      <td class="bigbold">-5</td>
       <td>Cameron Smith -3
 +1 thru 2</td>
-      <td>Hideki Matsuyama E
-E thru 1</td>
-      <td>Will Zalatoris +1
+      <td>Patrick Cantlay -1
++1 thru 13</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Will Zalatoris E
++1 thru 13</td>
+      <td class="greyout leftborder">Jon Rahm(W) +2
+E thru 13</td>
+      <td class="greyout">Viktor Hovland +2
 +2 thru 12</td>
-      <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 12</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Ron Harrington</td>
@@ -284,22 +316,6 @@ E thru 13</td>
 E thru 11</td>
     </tr>
     <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-4</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Patrick Cantlay -1
-+1 thru 13</td>
-      <td>Tony Finau -1
-Not started</td>
-      <td>Shane Lowry +1
-E thru 4</td>
-      <td class="greyout leftborder">Will Zalatoris +1
-+2 thru 12</td>
-      <td class="greyout">Justin Thomas(W) +4
-E thru 1</td>
-    </tr>
-    <tr>
       <td class="bigbold">CRED</td>
       <td class="bigbold">-4</td>
       <td>Scottie Scheffler -3
@@ -316,20 +332,20 @@ E thru 11</td>
 +4 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Hadrian&#39;s Wall</td>
+      <td class="bigbold">Albert Selina</td>
       <td class="bigbold">-4</td>
-      <td>Cameron Smith -3
-+1 thru 2</td>
-      <td>Patrick Cantlay -1
-+1 thru 13</td>
+      <td>Scottie Scheffler -3
+Not started</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Will Zalatoris +1
-+2 thru 12</td>
+      <td>Webb Simpson E
++1 thru 16</td>
+      <td>Will Zalatoris E
++1 thru 13</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
 E thru 13</td>
-      <td class="greyout">Viktor Hovland +2
-+2 thru 12</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">BCREAMED</td>
@@ -428,20 +444,52 @@ E thru 13</td>
 +4 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Albert Selina</td>
+      <td class="bigbold">Santorini Sunrises</td>
       <td class="bigbold">-2</td>
-      <td>Scottie Scheffler -3
+      <td>Cameron Smith -3
++1 thru 2</td>
+      <td>Corey Conners(W) -1
++1 (F)</td>
+      <td>Will Zalatoris E
++1 thru 13</td>
+      <td>Jon Rahm +2
+E thru 13</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 11</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Wilson</td>
+      <td class="bigbold">-2</td>
+      <td>Scottie Scheffler(W) -3
 Not started</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Webb Simpson +1
-+2 thru 15</td>
-      <td>Will Zalatoris +1
-+2 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm(W) +2
+      <td>Will Zalatoris E
++1 thru 13</td>
+      <td>Jon Rahm +2
 E thru 13</td>
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 12</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith -3
++1 thru 2</td>
+      <td>Matthew Fitzpatrick E
++1 thru 11</td>
+      <td>Will Zalatoris E
++1 thru 13</td>
+      <td>Shane Lowry +1
+E thru 4</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 11</td>
+      <td class="greyout">Justin Thomas(W) +4
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
@@ -460,38 +508,6 @@ E thru 4</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunrises</td>
-      <td class="bigbold">-1</td>
-      <td>Cameron Smith -3
-+1 thru 2</td>
-      <td>Corey Conners(W) -1
-+1 (F)</td>
-      <td>Will Zalatoris +1
-+2 thru 12</td>
-      <td>Jon Rahm +2
-E thru 13</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 11</td>
-      <td class="greyout">Jordan Spieth +4
-+2 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Wilson</td>
-      <td class="bigbold">-1</td>
-      <td>Scottie Scheffler(W) -3
-Not started</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Will Zalatoris +1
-+2 thru 12</td>
-      <td>Jon Rahm +2
-E thru 13</td>
-      <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 12</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 12</td>
-    </tr>
-    <tr>
       <td class="bigbold">Barb Wellard</td>
       <td class="bigbold">-1</td>
       <td>Joaquin Niemann -3
@@ -508,6 +524,22 @@ E thru 11</td>
 +4 thru 12</td>
     </tr>
     <tr>
+      <td class="bigbold">New Lu</td>
+      <td class="bigbold">-1</td>
+      <td>Cameron Smith -3
++1 thru 2</td>
+      <td>Patrick Cantlay -1
++1 thru 13</td>
+      <td>Will Zalatoris E
++1 thru 13</td>
+      <td>Brooks Koepka +3
+E thru 11</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
+E thru 1</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 12</td>
+    </tr>
+    <tr>
       <td class="bigbold">Bill Hunter</td>
       <td class="bigbold">-1</td>
       <td>Cameron Smith(W) -3
@@ -517,27 +549,11 @@ E thru 11</td>
       <td>Hideki Matsuyama E
 E thru 1</td>
       <td>Marc Leishman +3
-+2 thru 15</td>
++2 thru 16</td>
       <td class="greyout leftborder">Justin Thomas +4
 E thru 1</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-1</td>
-      <td>Cameron Smith -3
-+1 thru 2</td>
-      <td>Matthew Fitzpatrick E
-+1 thru 11</td>
-      <td>Shane Lowry +1
-E thru 4</td>
-      <td>Will Zalatoris +1
-+2 thru 12</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 11</td>
-      <td class="greyout">Justin Thomas(W) +4
-E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Baggy Pants</td>
@@ -588,22 +604,6 @@ E thru 13</td>
 +2 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">New Lu</td>
-      <td class="bigbold">0</td>
-      <td>Cameron Smith -3
-+1 thru 2</td>
-      <td>Patrick Cantlay -1
-+1 thru 13</td>
-      <td>Will Zalatoris +1
-+2 thru 12</td>
-      <td>Brooks Koepka +3
-E thru 11</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-E thru 1</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 12</td>
-    </tr>
-    <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
       <td class="bigbold">0</td>
       <td>Scottie Scheffler -3
@@ -636,6 +636,22 @@ E thru 11</td>
 +2 thru 12</td>
     </tr>
     <tr>
+      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">1</td>
+      <td>Patrick Cantlay -1
++1 thru 13</td>
+      <td>Collin Morikawa E
+-1 thru 13</td>
+      <td>Will Zalatoris E
++1 thru 13</td>
+      <td>Viktor Hovland(W) +2
++2 thru 12</td>
+      <td class="greyout leftborder">Jon Rahm +2
+E thru 13</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 12</td>
+    </tr>
+    <tr>
       <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">1</td>
       <td>Dustin Johnson -2
@@ -666,6 +682,22 @@ E thru 13</td>
 +2 thru 12</td>
       <td class="greyout">Paul Casey
 Out With Injury</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Grace</td>
+      <td class="bigbold">1</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Collin Morikawa E
+-1 thru 13</td>
+      <td>Will Zalatoris E
++1 thru 13</td>
+      <td>Viktor Hovland +2
++2 thru 12</td>
+      <td class="greyout leftborder">Rory McIlroy +4
++3 thru 11</td>
+      <td class="greyout">Xander Schauffele(W) +6
++4 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
@@ -732,22 +764,6 @@ E thru 1</td>
 +4 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Walk 1</td>
-      <td class="bigbold">2</td>
-      <td>Patrick Cantlay -1
-+1 thru 13</td>
-      <td>Collin Morikawa E
--1 thru 13</td>
-      <td>Will Zalatoris +1
-+2 thru 12</td>
-      <td>Viktor Hovland(W) +2
-+2 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm +2
-E thru 13</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 12</td>
-    </tr>
-    <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">2</td>
       <td>Daniel Berger -1
@@ -761,22 +777,6 @@ E thru 13</td>
       <td class="greyout leftborder">Justin Thomas(W) +4
 E thru 1</td>
       <td class="greyout">Xander Schauffele +6
-+4 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Grace</td>
-      <td class="bigbold">2</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Collin Morikawa E
--1 thru 13</td>
-      <td>Will Zalatoris +1
-+2 thru 12</td>
-      <td>Viktor Hovland +2
-+2 thru 12</td>
-      <td class="greyout leftborder">Rory McIlroy +4
-+3 thru 11</td>
-      <td class="greyout">Xander Schauffele(W) +6
 +4 thru 12</td>
     </tr>
     <tr>
@@ -796,6 +796,22 @@ E thru 1</td>
 +4 thru 12</td>
     </tr>
     <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">2</td>
+      <td>Tiger Woods(W) E
++1 thru 2</td>
+      <td>Collin Morikawa E
+-1 thru 13</td>
+      <td>Will Zalatoris E
++1 thru 13</td>
+      <td>Viktor Hovland +2
++2 thru 12</td>
+      <td class="greyout leftborder">Rory McIlroy +4
++3 thru 11</td>
+      <td class="greyout">Justin Thomas +4
+E thru 1</td>
+    </tr>
+    <tr>
       <td class="bigbold">Philip Dale</td>
       <td class="bigbold">3</td>
       <td>Scottie Scheffler -3
@@ -810,22 +826,6 @@ E thru 1</td>
 +2 thru 12</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">3</td>
-      <td>Tiger Woods(W) E
-+1 thru 2</td>
-      <td>Collin Morikawa E
--1 thru 13</td>
-      <td>Will Zalatoris +1
-+2 thru 12</td>
-      <td>Viktor Hovland +2
-+2 thru 12</td>
-      <td class="greyout leftborder">Rory McIlroy +4
-+3 thru 11</td>
-      <td class="greyout">Justin Thomas +4
-E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
@@ -876,6 +876,22 @@ E thru 11</td>
 E thru 1</td>
     </tr>
     <tr>
+      <td class="bigbold">Jabby</td>
+      <td class="bigbold">4</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Will Zalatoris E
++1 thru 13</td>
+      <td>Jon Rahm +2
+E thru 13</td>
+      <td>Brooks Koepka +3
+E thru 11</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
+E thru 1</td>
+      <td class="greyout">Rory McIlroy +4
++3 thru 11</td>
+    </tr>
+    <tr>
       <td class="bigbold">Fred Jamieson</td>
       <td class="bigbold">4</td>
       <td>Scottie Scheffler -3
@@ -892,28 +908,12 @@ E thru 11</td>
 +4 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Jabby</td>
-      <td class="bigbold">5</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Will Zalatoris +1
-+2 thru 12</td>
-      <td>Jon Rahm +2
-E thru 13</td>
-      <td>Brooks Koepka +3
-E thru 11</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-E thru 1</td>
-      <td class="greyout">Rory McIlroy +4
-+3 thru 11</td>
-    </tr>
-    <tr>
       <td class="bigbold">Wylie</td>
-      <td class="bigbold">5</td>
+      <td class="bigbold">4</td>
       <td>Scottie Scheffler -3
 Not started</td>
-      <td>Will Zalatoris +1
-+2 thru 12</td>
+      <td>Will Zalatoris E
++1 thru 13</td>
       <td>Brooks Koepka +3
 E thru 11</td>
       <td>Justin Thomas(W) +4
@@ -973,9 +973,9 @@ E thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">8</td>
-      <td>Will Zalatoris +1
-+2 thru 12</td>
+      <td class="bigbold">7</td>
+      <td>Will Zalatoris E
++1 thru 13</td>
       <td>Jon Rahm(W) +2
 E thru 13</td>
       <td>Viktor Hovland +2
@@ -986,6 +986,22 @@ E thru 11</td>
 +2 thru 12</td>
       <td class="greyout">Justin Thomas +4
 E thru 1</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">8</td>
+      <td>Will Zalatoris E
++1 thru 13</td>
+      <td>Viktor Hovland +2
++2 thru 12</td>
+      <td>Jon Rahm +2
+E thru 13</td>
+      <td>Justin Thomas(W) +4
+E thru 1</td>
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 12</td>
+      <td class="greyout">Sam Burns +5
++2 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Hasbulla</td>
@@ -1002,22 +1018,6 @@ E thru 11</td>
 E thru 1</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">9</td>
-      <td>Will Zalatoris +1
-+2 thru 12</td>
-      <td>Viktor Hovland +2
-+2 thru 12</td>
-      <td>Jon Rahm +2
-E thru 13</td>
-      <td>Justin Thomas(W) +4
-E thru 1</td>
-      <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 12</td>
-      <td class="greyout">Sam Burns +5
-+2 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Brian McDonald</td>
