--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:17:11 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:17:54 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,15 +141,15 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-4</td>
+      <td class="bigbold">-5</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Patrick Cantlay -1
 +1 thru 13</td>
       <td>Tony Finau -1
 Not started</td>
-      <td>Will Zalatoris +1
-+2 thru 12</td>
+      <td>Will Zalatoris E
++1 thru 13</td>
       <td class="greyout leftborder">Shane Lowry +1
 E thru 4</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -172,6 +172,22 @@ Not started</td>
 +4 thru 12</td>
     </tr>
     <tr>
+      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">-3</td>
+      <td>Sungjae Im -4
++1 thru 16</td>
+      <td>Patrick Cantlay -1
++1 thru 13</td>
+      <td>Collin Morikawa E
+-1 thru 13</td>
+      <td>Viktor Hovland(W) +2
++2 thru 12</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 11</td>
+      <td class="greyout">Justin Thomas +4
+E thru 1</td>
+    </tr>
+    <tr>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith -3
@@ -188,19 +204,35 @@ E thru 1</td>
 +3 thru 11</td>
     </tr>
     <tr>
-      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-2</td>
-      <td>Sungjae Im -3
-+2 thru 15</td>
-      <td>Patrick Cantlay -1
-+1 thru 13</td>
+      <td>Tony Finau -1
+Not started</td>
+      <td>Daniel Berger -1
+E thru 3</td>
       <td>Collin Morikawa E
 -1 thru 13</td>
-      <td>Viktor Hovland(W) +2
-+2 thru 12</td>
+      <td>Will Zalatoris E
++1 thru 13</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 11</td>
-      <td class="greyout">Justin Thomas +4
+      <td class="greyout">Justin Thomas(W) +4
+E thru 1</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith -3
++1 thru 2</td>
+      <td>Matthew Fitzpatrick E
++1 thru 11</td>
+      <td>Will Zalatoris E
++1 thru 13</td>
+      <td>Shane Lowry +1
+E thru 4</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 11</td>
+      <td class="greyout">Justin Thomas(W) +4
 E thru 1</td>
     </tr>
     <tr>
@@ -216,22 +248,6 @@ E thru 14</td>
 E thru 4</td>
       <td class="greyout leftborder">Jon Rahm +2
 E thru 13</td>
-      <td class="greyout">Justin Thomas(W) +4
-E thru 1</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-1</td>
-      <td>Tony Finau -1
-Not started</td>
-      <td>Daniel Berger -1
-E thru 3</td>
-      <td>Collin Morikawa E
--1 thru 13</td>
-      <td>Will Zalatoris +1
-+2 thru 12</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 11</td>
       <td class="greyout">Justin Thomas(W) +4
 E thru 1</td>
     </tr>
@@ -252,20 +268,20 @@ E thru 11</td>
 +4 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-1</td>
-      <td>Cameron Smith -3
-+1 thru 2</td>
-      <td>Matthew Fitzpatrick E
-+1 thru 11</td>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">0</td>
+      <td>Scottie Scheffler(W) -3
+Not started</td>
+      <td>Will Zalatoris E
++1 thru 13</td>
       <td>Shane Lowry +1
 E thru 4</td>
-      <td>Will Zalatoris +1
-+2 thru 12</td>
+      <td>Jon Rahm +2
+E thru 13</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 11</td>
-      <td class="greyout">Justin Thomas(W) +4
-E thru 1</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -296,22 +312,6 @@ E thru 3</td>
 E thru 13</td>
       <td class="greyout leftborder">Robert MacIntyre +2
 +1 (F)</td>
-      <td class="greyout">Jordan Spieth +4
-+2 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">1</td>
-      <td>Scottie Scheffler(W) -3
-Not started</td>
-      <td>Will Zalatoris +1
-+2 thru 12</td>
-      <td>Shane Lowry +1
-E thru 4</td>
-      <td>Jon Rahm +2
-E thru 13</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 11</td>
       <td class="greyout">Jordan Spieth +4
 +2 thru 12</td>
     </tr>
