--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:20:03 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:20:46 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -149,7 +149,7 @@ body {
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Talor Gooch -1
--1 thru 4</td>
+-1 thru 5</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 12</td>
       <td class="greyout">Xander Schauffele +6
@@ -229,7 +229,7 @@ E thru 12</td>
       <td>Patrick Cantlay -1
 +1 thru 13</td>
       <td>Matthew Fitzpatrick E
-+1 thru 11</td>
++1 thru 12</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 12</td>
       <td class="greyout">Xander Schauffele +6
@@ -291,7 +291,7 @@ E thru 12</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Talor Gooch -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Hideki Matsuyama E
 E thru 1</td>
       <td class="greyout leftborder">Jon Rahm(W) +2
@@ -307,29 +307,13 @@ E thru 12</td>
       <td>Patrick Cantlay -1
 +1 thru 13</td>
       <td>Tony Finau -1
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris E
 +1 thru 13</td>
       <td class="greyout leftborder">Shane Lowry +1
 E thru 4</td>
       <td class="greyout">Justin Thomas(W) +4
 E thru 1</td>
-    </tr>
-    <tr>
-      <td class="bigbold">CRED</td>
-      <td class="bigbold">-3</td>
-      <td>Dustin Johnson -2
-+1 thru 14</td>
-      <td>Scottie Scheffler -2
-+1 thru 1</td>
-      <td>Patrick Cantlay -1
-+1 thru 13</td>
-      <td>Adam Scott +2
-Not started</td>
-      <td class="greyout leftborder">Brooks Koepka(W) +3
-E thru 12</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Albert Selina</td>
@@ -394,6 +378,22 @@ E thru 4</td>
 +2 thru 12</td>
       <td class="greyout">Jon Rahm +2
 E thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">CRED</td>
+      <td class="bigbold">-2</td>
+      <td>Dustin Johnson -2
++1 thru 14</td>
+      <td>Scottie Scheffler -2
++1 thru 1</td>
+      <td>Patrick Cantlay -1
++1 thru 13</td>
+      <td>Brooks Koepka(W) +3
+E thru 12</td>
+      <td class="greyout leftborder">Adam Scott +3
++1 thru 1</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Don Shaw</td>
@@ -465,7 +465,7 @@ E thru 13</td>
       <td>Cameron Smith -3
 +1 thru 2</td>
       <td>Matthew Fitzpatrick E
-+1 thru 11</td>
++1 thru 12</td>
       <td>Will Zalatoris E
 +1 thru 13</td>
       <td>Shane Lowry +1
@@ -481,9 +481,9 @@ E thru 1</td>
       <td>Dustin Johnson(W) -2
 +1 thru 14</td>
       <td>Tony Finau -1
-Not started</td>
+E thru 1</td>
       <td>Matthew Fitzpatrick E
-+1 thru 11</td>
++1 thru 12</td>
       <td>Shane Lowry +1
 E thru 4</td>
       <td class="greyout leftborder">Jordan Spieth +4
@@ -595,7 +595,7 @@ E thru 4</td>
       <td>Daniel Berger -1
 E thru 3</td>
       <td>Collin Morikawa E
--1 thru 13</td>
+-1 thru 14</td>
       <td>Robert MacIntyre +2
 +1 (F)</td>
       <td class="greyout leftborder">Jon Rahm +2
@@ -609,9 +609,9 @@ E thru 13</td>
       <td>Patrick Cantlay -1
 +1 thru 13</td>
       <td>Tony Finau -1
-Not started</td>
+E thru 1</td>
       <td>Collin Morikawa E
--1 thru 13</td>
+-1 thru 14</td>
       <td>Jon Rahm(W) +2
 E thru 13</td>
       <td class="greyout leftborder">Brooks Koepka +3
@@ -625,7 +625,7 @@ E thru 12</td>
       <td>Patrick Cantlay -1
 +1 thru 13</td>
       <td>Collin Morikawa E
--1 thru 13</td>
+-1 thru 14</td>
       <td>Will Zalatoris E
 +1 thru 13</td>
       <td>Viktor Hovland(W) +2
@@ -657,7 +657,7 @@ E thru 13</td>
       <td>Patrick Cantlay -1
 +1 thru 13</td>
       <td>Collin Morikawa(W) E
--1 thru 13</td>
+-1 thru 14</td>
       <td>Hideki Matsuyama E
 E thru 1</td>
       <td>Jon Rahm +2
@@ -673,7 +673,7 @@ Out With Injury</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Collin Morikawa E
--1 thru 13</td>
+-1 thru 14</td>
       <td>Will Zalatoris E
 +1 thru 13</td>
       <td>Viktor Hovland +2
@@ -769,7 +769,7 @@ E thru 1</td>
       <td>Tiger Woods(W) E
 +1 thru 2</td>
       <td>Collin Morikawa E
--1 thru 13</td>
+-1 thru 14</td>
       <td>Will Zalatoris E
 +1 thru 13</td>
       <td>Viktor Hovland +2
@@ -929,7 +929,7 @@ Missed Cut</td>
       <td>Patrick Cantlay -1
 +1 thru 13</td>
       <td>Collin Morikawa E
--1 thru 13</td>
+-1 thru 14</td>
       <td>Brooks Koepka +3
 E thru 12</td>
       <td>Justin Thomas(W) +4
@@ -943,7 +943,7 @@ E thru 1</td>
       <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">6</td>
       <td>Collin Morikawa(W) E
--1 thru 13</td>
+-1 thru 14</td>
       <td>Tiger Woods E
 +1 thru 2</td>
       <td>Viktor Hovland +2
@@ -959,7 +959,7 @@ E thru 1</td>
       <td class="bigbold">Jeff Turnham</td>
       <td class="bigbold">7</td>
       <td>Collin Morikawa E
--1 thru 13</td>
+-1 thru 14</td>
       <td>Viktor Hovland(W) +2
 +2 thru 12</td>
       <td>Jon Rahm +2
