--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:20:03 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:20:46 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -147,7 +147,7 @@ body {
       <td>Patrick Cantlay -1
 +1 thru 13</td>
       <td>Tony Finau -1
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris E
 +1 thru 13</td>
       <td class="greyout leftborder">Shane Lowry +1
@@ -163,7 +163,7 @@ E thru 1</td>
       <td>Patrick Cantlay -1
 +1 thru 13</td>
       <td>Collin Morikawa E
--1 thru 13</td>
+-1 thru 14</td>
       <td>Viktor Hovland(W) +2
 +2 thru 12</td>
       <td class="greyout leftborder">Brooks Koepka +3
@@ -207,11 +207,11 @@ E thru 1</td>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-2</td>
       <td>Tony Finau -1
-Not started</td>
+E thru 1</td>
       <td>Daniel Berger -1
 E thru 3</td>
       <td>Collin Morikawa E
--1 thru 13</td>
+-1 thru 14</td>
       <td>Will Zalatoris E
 +1 thru 13</td>
       <td class="greyout leftborder">Brooks Koepka +3
@@ -225,7 +225,7 @@ E thru 1</td>
       <td>Cameron Smith -3
 +1 thru 2</td>
       <td>Matthew Fitzpatrick E
-+1 thru 11</td>
++1 thru 12</td>
       <td>Will Zalatoris E
 +1 thru 13</td>
       <td>Shane Lowry +1
@@ -259,7 +259,7 @@ E thru 1</td>
       <td>Patrick Cantlay -1
 +1 thru 13</td>
       <td>Collin Morikawa E
--1 thru 13</td>
+-1 thru 14</td>
       <td>Brooks Koepka +3
 E thru 12</td>
       <td class="greyout leftborder">Rory McIlroy +4
@@ -273,9 +273,9 @@ E thru 12</td>
       <td>Patrick Cantlay -1
 +1 thru 13</td>
       <td>Tony Finau -1
-Not started</td>
+E thru 1</td>
       <td>Collin Morikawa E
--1 thru 13</td>
+-1 thru 14</td>
       <td>Jon Rahm(W) +2
 E thru 13</td>
       <td class="greyout leftborder">Brooks Koepka +3
@@ -291,7 +291,7 @@ E thru 12</td>
       <td>Daniel Berger -1
 E thru 3</td>
       <td>Collin Morikawa E
--1 thru 13</td>
+-1 thru 14</td>
       <td>Jon Rahm +2
 E thru 13</td>
       <td class="greyout leftborder">Robert MacIntyre +2
@@ -367,7 +367,7 @@ Missed Cut</td>
       <td class="bigbold">Jeff Turnham</td>
       <td class="bigbold">7</td>
       <td>Collin Morikawa E
--1 thru 13</td>
+-1 thru 14</td>
       <td>Viktor Hovland(W) +2
 +2 thru 12</td>
       <td>Jon Rahm +2
