--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:27:57 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:28:40 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -152,8 +152,8 @@ E thru 1</td>
 +1 thru 13</td>
       <td class="greyout leftborder">Shane Lowry +1
 E thru 4</td>
-      <td class="greyout">Justin Thomas(W) +4
-E thru 1</td>
+      <td class="greyout">Justin Thomas(W) +3
+-1 thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -166,10 +166,10 @@ E thru 1</td>
 -1 thru 14</td>
       <td>Viktor Hovland(W) +2
 +2 thru 12</td>
-      <td class="greyout leftborder">Brooks Koepka +3
+      <td class="greyout leftborder">Justin Thomas +3
+-1 thru 2</td>
+      <td class="greyout">Brooks Koepka +3
 E thru 12</td>
-      <td class="greyout">Justin Thomas +4
-E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -182,8 +182,8 @@ E thru 2</td>
 -2 thru 3</td>
       <td>Viktor Hovland +2
 +2 thru 12</td>
-      <td class="greyout leftborder">Justin Thomas +4
-E thru 1</td>
+      <td class="greyout leftborder">Justin Thomas +3
+-1 thru 2</td>
       <td class="greyout">Rory McIlroy +4
 +3 thru 12</td>
     </tr>
@@ -204,22 +204,6 @@ E thru 1</td>
 +4 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-2</td>
-      <td>Tony Finau -1
-E thru 1</td>
-      <td>Daniel Berger -1
-E thru 3</td>
-      <td>Collin Morikawa E
--1 thru 14</td>
-      <td>Will Zalatoris E
-+1 thru 13</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 12</td>
-      <td class="greyout">Justin Thomas(W) +4
-E thru 1</td>
-    </tr>
-    <tr>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -3
@@ -230,10 +214,10 @@ E thru 1</td>
 +1 thru 13</td>
       <td>Shane Lowry +1
 E thru 4</td>
-      <td class="greyout leftborder">Brooks Koepka +3
+      <td class="greyout leftborder">Justin Thomas(W) +3
+-1 thru 2</td>
+      <td class="greyout">Brooks Koepka +3
 E thru 12</td>
-      <td class="greyout">Justin Thomas(W) +4
-E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
@@ -248,8 +232,24 @@ E thru 15</td>
 E thru 4</td>
       <td class="greyout leftborder">Jon Rahm +2
 E thru 13</td>
-      <td class="greyout">Justin Thomas(W) +4
+      <td class="greyout">Justin Thomas(W) +3
+-1 thru 2</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">-1</td>
+      <td>Tony Finau -1
 E thru 1</td>
+      <td>Collin Morikawa E
+-1 thru 14</td>
+      <td>Will Zalatoris E
++1 thru 13</td>
+      <td>Daniel Berger E
++1 thru 4</td>
+      <td class="greyout leftborder">Justin Thomas(W) +3
+-1 thru 2</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
@@ -284,22 +284,6 @@ E thru 12</td>
 +2 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">0</td>
-      <td>Corey Conners(W) -1
-+1 (F)</td>
-      <td>Daniel Berger -1
-E thru 3</td>
-      <td>Collin Morikawa E
--1 thru 14</td>
-      <td>Jon Rahm +2
-E thru 13</td>
-      <td class="greyout leftborder">Robert MacIntyre +2
-+1 (F)</td>
-      <td class="greyout">Jordan Spieth +4
-+2 thru 12</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Bryson</td>
       <td class="bigbold">1</td>
       <td>Scottie Scheffler(W) -2
@@ -312,6 +296,22 @@ E thru 4</td>
 E thru 13</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 12</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">1</td>
+      <td>Corey Conners(W) -1
++1 (F)</td>
+      <td>Collin Morikawa E
+-1 thru 14</td>
+      <td>Daniel Berger E
++1 thru 4</td>
+      <td>Jon Rahm +2
+E thru 13</td>
+      <td class="greyout leftborder">Robert MacIntyre +2
++1 (F)</td>
       <td class="greyout">Jordan Spieth +4
 +2 thru 12</td>
     </tr>
@@ -333,31 +333,31 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">1</td>
       <td>Cameron Smith(W) -3
 +1 thru 3</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Viktor Hovland +2
 +2 thru 12</td>
-      <td>Jordan Spieth +4
+      <td>Justin Thomas +3
+-1 thru 2</td>
+      <td class="greyout leftborder">Jordan Spieth +4
 +2 thru 12</td>
-      <td class="greyout leftborder">Justin Thomas +4
-E thru 1</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">3</td>
       <td>Dustin Johnson -2
 +1 thru 14</td>
       <td>Corey Conners -1
 +1 (F)</td>
+      <td>Justin Thomas +3
+-1 thru 2</td>
       <td>Russell Henley +3
 +2 (F)</td>
-      <td>Justin Thomas +4
-E thru 1</td>
       <td class="greyout leftborder">Xander Schauffele(W) +6
 +4 thru 12</td>
       <td class="greyout">Louis Oosthuizen
@@ -381,13 +381,13 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">8</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Jon Rahm +2
 E thru 13</td>
-      <td>Justin Thomas(W) +4
-E thru 1</td>
+      <td>Justin Thomas(W) +3
+-1 thru 2</td>
       <td>Jordan Spieth +4
 +2 thru 12</td>
       <td class="greyout leftborder">Xander Schauffele +6
