--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:30:06 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:30:49 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -596,10 +596,10 @@ E thru 2</td>
 +1 (F)</td>
       <td>Shane Lowry(W) +1
 E thru 4</td>
-      <td>Viktor Hovland +2
+      <td>Brian Harman +2
+E thru 8</td>
+      <td class="greyout leftborder">Viktor Hovland +2
 +2 thru 12</td>
-      <td class="greyout leftborder">Brian Harman +3
-+1 thru 7</td>
       <td class="greyout">Sam Burns +5
 +2 thru 15</td>
     </tr>
