--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:30:49 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:31:32 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -156,38 +156,6 @@ E thru 4</td>
 -1 thru 2</td>
     </tr>
     <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-3</td>
-      <td>Sungjae Im -4
-+1 thru 16</td>
-      <td>Patrick Cantlay -1
-+1 thru 13</td>
-      <td>Collin Morikawa E
--1 thru 14</td>
-      <td>Viktor Hovland(W) +2
-+2 thru 12</td>
-      <td class="greyout leftborder">Justin Thomas +3
--1 thru 2</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith -3
-+1 thru 3</td>
-      <td>Joaquin Niemann -3
-E thru 2</td>
-      <td>Tommy Fleetwood(W) +1
--2 thru 4</td>
-      <td>Viktor Hovland +2
-+2 thru 12</td>
-      <td class="greyout leftborder">Justin Thomas +3
--1 thru 2</td>
-      <td class="greyout">Rory McIlroy +4
-+3 thru 12</td>
-    </tr>
-    <tr>
       <td class="bigbold">Larry Judge</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -3
@@ -197,11 +165,43 @@ E thru 2</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Jordan Spieth +4
-+2 thru 12</td>
++2 thru 13</td>
       <td class="greyout leftborder">Sam Burns +5
 +2 thru 15</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">-2</td>
+      <td>Sungjae Im -4
++1 thru 16</td>
+      <td>Patrick Cantlay -1
++1 thru 13</td>
+      <td>Collin Morikawa E
+-1 thru 14</td>
+      <td>Viktor Hovland(W) +3
++3 thru 13</td>
+      <td class="greyout leftborder">Justin Thomas +3
+-1 thru 2</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Paxton Watson</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith -3
++1 thru 3</td>
+      <td>Joaquin Niemann -3
+E thru 2</td>
+      <td>Tommy Fleetwood(W) +1
+-2 thru 4</td>
+      <td>Justin Thomas +3
+-1 thru 2</td>
+      <td class="greyout leftborder">Viktor Hovland +3
++3 thru 13</td>
+      <td class="greyout">Rory McIlroy +4
++3 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
@@ -281,7 +281,7 @@ E thru 13</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 12</td>
       <td class="greyout">Jordan Spieth +4
-+2 thru 12</td>
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -297,7 +297,7 @@ E thru 13</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 12</td>
       <td class="greyout">Jordan Spieth +4
-+2 thru 12</td>
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -313,37 +313,37 @@ E thru 13</td>
       <td class="greyout leftborder">Robert MacIntyre +2
 +1 (F)</td>
       <td class="greyout">Jordan Spieth +4
-+2 thru 12</td>
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">2</td>
       <td>Dustin Johnson -2
 +1 thru 14</td>
       <td>Patrick Cantlay -1
 +1 thru 13</td>
-      <td>Viktor Hovland +2
-+2 thru 12</td>
       <td>Jon Rahm +2
 E thru 13</td>
+      <td>Viktor Hovland +3
++3 thru 13</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 12</td>
       <td class="greyout">Jordan Spieth(W) +4
-+2 thru 12</td>
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">2</td>
       <td>Cameron Smith(W) -3
 +1 thru 3</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Viktor Hovland +2
-+2 thru 12</td>
+      <td>Viktor Hovland +3
++3 thru 13</td>
       <td>Justin Thomas +3
 -1 thru 2</td>
       <td class="greyout leftborder">Jordan Spieth +4
-+2 thru 12</td>
++2 thru 13</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 12</td>
     </tr>
@@ -365,13 +365,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">8</td>
       <td>Collin Morikawa E
 -1 thru 14</td>
-      <td>Viktor Hovland(W) +2
-+2 thru 12</td>
       <td>Jon Rahm +2
 E thru 13</td>
+      <td>Viktor Hovland(W) +3
++3 thru 13</td>
       <td>Brooks Koepka +3
 E thru 12</td>
       <td class="greyout leftborder">Patrick Reed +3
@@ -389,7 +389,7 @@ E thru 13</td>
       <td>Justin Thomas(W) +3
 -1 thru 2</td>
       <td>Jordan Spieth +4
-+2 thru 12</td>
++2 thru 13</td>
       <td class="greyout leftborder">Xander Schauffele +6
 +4 thru 12</td>
       <td class="greyout">Louis Oosthuizen
