--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:33:41 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:34:24 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -228,10 +228,10 @@ E thru 12</td>
 +1 (F)</td>
       <td>Tyrrell Hatton E
 E thru 15</td>
-      <td>Shane Lowry +1
+      <td>Jon Rahm +1
+-1 thru 14</td>
+      <td class="greyout leftborder">Shane Lowry +1
 E thru 5</td>
-      <td class="greyout leftborder">Jon Rahm +2
-E thru 13</td>
       <td class="greyout">Justin Thomas(W) +3
 -1 thru 2</td>
     </tr>
@@ -269,15 +269,15 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">-1</td>
       <td>Patrick Cantlay -1
 +1 thru 14</td>
       <td>Tony Finau -1
 E thru 1</td>
       <td>Collin Morikawa E
 -1 thru 14</td>
-      <td>Jon Rahm(W) +2
-E thru 13</td>
+      <td>Jon Rahm(W) +1
+-1 thru 14</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 12</td>
       <td class="greyout">Jordan Spieth +4
@@ -285,15 +285,15 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">0</td>
       <td>Scottie Scheffler(W) -2
 +1 thru 1</td>
       <td>Will Zalatoris E
 +1 thru 14</td>
+      <td>Jon Rahm +1
+-1 thru 14</td>
       <td>Shane Lowry +1
 E thru 5</td>
-      <td>Jon Rahm +2
-E thru 13</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 12</td>
       <td class="greyout">Jordan Spieth +4
@@ -301,15 +301,15 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">1</td>
+      <td class="bigbold">0</td>
       <td>Corey Conners(W) -1
 +1 (F)</td>
       <td>Collin Morikawa E
 -1 thru 14</td>
       <td>Daniel Berger E
 +1 thru 4</td>
-      <td>Jon Rahm +2
-E thru 13</td>
+      <td>Jon Rahm +1
+-1 thru 14</td>
       <td class="greyout leftborder">Robert MacIntyre +2
 +1 (F)</td>
       <td class="greyout">Jordan Spieth +4
@@ -317,13 +317,13 @@ E thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">1</td>
       <td>Dustin Johnson -2
 +1 thru 14</td>
       <td>Patrick Cantlay -1
 +1 thru 14</td>
-      <td>Jon Rahm +2
-E thru 13</td>
+      <td>Jon Rahm +1
+-1 thru 14</td>
       <td>Viktor Hovland +3
 +3 thru 13</td>
       <td class="greyout leftborder">Brooks Koepka +3
@@ -365,11 +365,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">7</td>
       <td>Collin Morikawa E
 -1 thru 14</td>
-      <td>Jon Rahm +2
-E thru 13</td>
+      <td>Jon Rahm +1
+-1 thru 14</td>
       <td>Viktor Hovland(W) +3
 +3 thru 13</td>
       <td>Brooks Koepka +3
@@ -381,11 +381,11 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">7</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Jon Rahm +2
-E thru 13</td>
+      <td>Jon Rahm +1
+-1 thru 14</td>
       <td>Justin Thomas(W) +3
 -1 thru 2</td>
       <td>Jordan Spieth +4
