--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:33:41 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:34:24 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -246,8 +246,8 @@ E thru 12</td>
 -1 thru 6</td>
       <td>Hideki Matsuyama -1
 -1 thru 2</td>
-      <td class="greyout leftborder">Jon Rahm(W) +2
-E thru 13</td>
+      <td class="greyout leftborder">Jon Rahm(W) +1
+-1 thru 14</td>
       <td class="greyout">Brooks Koepka +3
 E thru 12</td>
     </tr>
@@ -278,8 +278,8 @@ E thru 12</td>
 +1 (F)</td>
       <td>Will Zalatoris E
 +1 thru 14</td>
-      <td class="greyout leftborder">Jon Rahm(W) +2
-E thru 13</td>
+      <td class="greyout leftborder">Jon Rahm(W) +1
+-1 thru 14</td>
       <td class="greyout">Viktor Hovland +3
 +3 thru 13</td>
     </tr>
@@ -326,10 +326,26 @@ E thru 5</td>
 -1 thru 2</td>
       <td>Shane Lowry +1
 E thru 5</td>
-      <td class="greyout leftborder">Jon Rahm +2
-E thru 13</td>
+      <td class="greyout leftborder">Jon Rahm +1
+-1 thru 14</td>
       <td class="greyout">Viktor Hovland +3
 +3 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith -3
++1 thru 3</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Tiger Woods E
++1 thru 2</td>
+      <td>Jon Rahm(W) +1
+-1 thru 14</td>
+      <td class="greyout leftborder">Sam Burns +5
++2 thru 15</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Albert Selina</td>
@@ -342,10 +358,26 @@ E thru 13</td>
 +1 thru 17</td>
       <td>Will Zalatoris E
 +1 thru 14</td>
-      <td class="greyout leftborder">Jon Rahm(W) +2
-E thru 13</td>
+      <td class="greyout leftborder">Jon Rahm(W) +1
+-1 thru 14</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunrises</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith -3
++1 thru 3</td>
+      <td>Corey Conners(W) -1
++1 (F)</td>
+      <td>Will Zalatoris E
++1 thru 14</td>
+      <td>Jon Rahm +1
+-1 thru 14</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 12</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">BCREAMED</td>
@@ -362,6 +394,38 @@ E thru 12</td>
 +2 thru 15</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Lyle Rattray</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler -2
++1 thru 1</td>
+      <td>Patrick Cantlay(W) -1
++1 thru 14</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Jon Rahm +1
+-1 thru 14</td>
+      <td class="greyout leftborder">Viktor Hovland +3
++3 thru 13</td>
+      <td class="greyout">Sam Burns +5
++2 thru 15</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Roy Jeffrey B</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler(W) -2
++1 thru 1</td>
+      <td>Patrick Cantlay -1
++1 thru 14</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Jon Rahm +1
+-1 thru 14</td>
+      <td class="greyout leftborder">Robert MacIntyre +2
++1 (F)</td>
+      <td class="greyout">Rory McIlroy +4
++3 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Uphill into the Wind</td>
@@ -396,68 +460,36 @@ E thru 12</td>
 +4 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">Matt Wilson</td>
       <td class="bigbold">-2</td>
-      <td>Cameron Smith -3
-+1 thru 3</td>
+      <td>Scottie Scheffler(W) -2
++1 thru 1</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Tiger Woods E
-+1 thru 2</td>
-      <td>Jon Rahm(W) +2
-E thru 13</td>
-      <td class="greyout leftborder">Sam Burns +5
-+2 thru 15</td>
+      <td>Will Zalatoris E
++1 thru 14</td>
+      <td>Jon Rahm +1
+-1 thru 14</td>
+      <td class="greyout leftborder">Jordan Spieth +4
++2 thru 13</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunrises</td>
+      <td class="bigbold">Barb Wellard</td>
       <td class="bigbold">-2</td>
+      <td>Joaquin Niemann -3
+E thru 2</td>
       <td>Cameron Smith -3
 +1 thru 3</td>
-      <td>Corey Conners(W) -1
-+1 (F)</td>
-      <td>Will Zalatoris E
-+1 thru 14</td>
-      <td>Jon Rahm +2
-E thru 13</td>
-      <td class="greyout leftborder">Brooks Koepka +3
+      <td>Jon Rahm(W) +1
+-1 thru 14</td>
+      <td>Brooks Koepka +3
 E thru 12</td>
-      <td class="greyout">Jordan Spieth +4
-+2 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Lyle Rattray</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler -2
-+1 thru 1</td>
-      <td>Patrick Cantlay(W) -1
-+1 thru 14</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Jon Rahm +2
-E thru 13</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-+3 thru 13</td>
-      <td class="greyout">Sam Burns +5
+      <td class="greyout leftborder">Sam Burns +5
 +2 thru 15</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Roy Jeffrey B</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler(W) -2
-+1 thru 1</td>
-      <td>Patrick Cantlay -1
-+1 thru 14</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Robert MacIntyre +2
-+1 (F)</td>
-      <td class="greyout leftborder">Jon Rahm +2
-E thru 13</td>
-      <td class="greyout">Rory McIlroy +4
-+3 thru 12</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
@@ -508,36 +540,20 @@ E thru 5</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Wilson</td>
+      <td class="bigbold">Shane Hosegood</td>
       <td class="bigbold">-1</td>
-      <td>Scottie Scheffler(W) -2
-+1 thru 1</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Will Zalatoris E
+      <td>Patrick Cantlay -1
 +1 thru 14</td>
-      <td>Jon Rahm +2
-E thru 13</td>
+      <td>Hideki Matsuyama -1
+-1 thru 2</td>
+      <td>Collin Morikawa(W) E
+-1 thru 14</td>
+      <td>Jon Rahm +1
+-1 thru 14</td>
       <td class="greyout leftborder">Jordan Spieth +4
 +2 thru 13</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Barb Wellard</td>
-      <td class="bigbold">-1</td>
-      <td>Joaquin Niemann -3
-E thru 2</td>
-      <td>Cameron Smith -3
-+1 thru 3</td>
-      <td>Jon Rahm(W) +2
-E thru 13</td>
-      <td>Brooks Koepka +3
-E thru 12</td>
-      <td class="greyout leftborder">Sam Burns +5
-+2 thru 15</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 13</td>
+      <td class="greyout">Paul Casey
+Out With Injury</td>
     </tr>
     <tr>
       <td class="bigbold">New Lu</td>
@@ -588,20 +604,52 @@ E thru 8</td>
 +2 thru 15</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Hosegood</td>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">-1</td>
+      <td>Patrick Cantlay -1
++1 thru 14</td>
+      <td>Tony Finau -1
+E thru 1</td>
+      <td>Collin Morikawa E
+-1 thru 14</td>
+      <td>Jon Rahm(W) +1
+-1 thru 14</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 12</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Walk 1</td>
       <td class="bigbold">0</td>
       <td>Patrick Cantlay -1
 +1 thru 14</td>
-      <td>Hideki Matsuyama -1
--1 thru 2</td>
-      <td>Collin Morikawa(W) E
+      <td>Collin Morikawa E
 -1 thru 14</td>
-      <td>Jon Rahm +2
-E thru 13</td>
-      <td class="greyout leftborder">Jordan Spieth +4
+      <td>Will Zalatoris E
++1 thru 14</td>
+      <td>Jon Rahm +1
+-1 thru 14</td>
+      <td class="greyout leftborder">Viktor Hovland(W) +3
++3 thru 13</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">0</td>
+      <td>Corey Conners(W) -1
++1 (F)</td>
+      <td>Daniel Berger E
++1 thru 4</td>
+      <td>Collin Morikawa E
+-1 thru 14</td>
+      <td>Jon Rahm +1
+-1 thru 14</td>
+      <td class="greyout leftborder">Robert MacIntyre +2
++1 (F)</td>
+      <td class="greyout">Jordan Spieth +4
 +2 thru 13</td>
-      <td class="greyout">Paul Casey
-Out With Injury</td>
     </tr>
     <tr>
       <td class="bigbold">Baggy Pants</td>
@@ -620,50 +668,18 @@ E thru 5</td>
 E thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">0</td>
-      <td>Patrick Cantlay -1
-+1 thru 14</td>
-      <td>Tony Finau -1
-E thru 1</td>
-      <td>Collin Morikawa E
--1 thru 14</td>
-      <td>Jon Rahm(W) +2
-E thru 13</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 12</td>
-      <td class="greyout">Jordan Spieth +4
-+2 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">1</td>
+      <td>Dustin Johnson -2
++1 thru 14</td>
       <td>Patrick Cantlay -1
 +1 thru 14</td>
-      <td>Collin Morikawa E
+      <td>Jon Rahm +1
 -1 thru 14</td>
-      <td>Will Zalatoris E
-+1 thru 14</td>
-      <td>Jon Rahm +2
-E thru 13</td>
-      <td class="greyout leftborder">Viktor Hovland(W) +3
+      <td>Viktor Hovland +3
 +3 thru 13</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">1</td>
-      <td>Corey Conners(W) -1
-+1 (F)</td>
-      <td>Daniel Berger E
-+1 thru 4</td>
-      <td>Collin Morikawa E
--1 thru 14</td>
-      <td>Robert MacIntyre +2
-+1 (F)</td>
-      <td class="greyout leftborder">Jon Rahm +2
-E thru 13</td>
+      <td class="greyout leftborder">Rory McIlroy(W) +4
++3 thru 12</td>
       <td class="greyout">Jordan Spieth +4
 +2 thru 13</td>
     </tr>
@@ -684,18 +700,50 @@ E thru 12</td>
 +2 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">2</td>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">1</td>
       <td>Dustin Johnson -2
 +1 thru 14</td>
       <td>Patrick Cantlay -1
 +1 thru 14</td>
-      <td>Jon Rahm +2
-E thru 13</td>
+      <td>Jon Rahm +1
+-1 thru 14</td>
       <td>Viktor Hovland +3
 +3 thru 13</td>
-      <td class="greyout leftborder">Rory McIlroy(W) +4
-+3 thru 12</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 12</td>
+      <td class="greyout">Jordan Spieth(W) +4
++2 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neville Spillman</td>
+      <td class="bigbold">1</td>
+      <td>Scottie Scheffler -2
++1 thru 1</td>
+      <td>Patrick Cantlay -1
++1 thru 14</td>
+      <td>Jon Rahm +1
+-1 thru 14</td>
+      <td>Brooks Koepka +3
+E thru 12</td>
+      <td class="greyout leftborder">Jordan Spieth(W) +4
++2 thru 13</td>
+      <td class="greyout">Sam Burns +5
++2 thru 15</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">2</td>
+      <td>Patrick Cantlay -1
++1 thru 14</td>
+      <td>Hideki Matsuyama -1
+-1 thru 2</td>
+      <td>Jon Rahm(W) +1
+-1 thru 14</td>
+      <td>Brooks Koepka +3
+E thru 12</td>
+      <td class="greyout leftborder">Justin Thomas +3
+-1 thru 2</td>
       <td class="greyout">Jordan Spieth +4
 +2 thru 13</td>
     </tr>
@@ -732,38 +780,6 @@ E thru 13</td>
 +4 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">2</td>
-      <td>Dustin Johnson -2
-+1 thru 14</td>
-      <td>Patrick Cantlay -1
-+1 thru 14</td>
-      <td>Jon Rahm +2
-E thru 13</td>
-      <td>Viktor Hovland +3
-+3 thru 13</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 12</td>
-      <td class="greyout">Jordan Spieth(W) +4
-+2 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neville Spillman</td>
-      <td class="bigbold">2</td>
-      <td>Scottie Scheffler -2
-+1 thru 1</td>
-      <td>Patrick Cantlay -1
-+1 thru 14</td>
-      <td>Jon Rahm +2
-E thru 13</td>
-      <td>Brooks Koepka +3
-E thru 12</td>
-      <td class="greyout leftborder">Jordan Spieth(W) +4
-+2 thru 13</td>
-      <td class="greyout">Sam Burns +5
-+2 thru 15</td>
-    </tr>
-    <tr>
       <td class="bigbold">Santorini Sunsets</td>
       <td class="bigbold">3</td>
       <td>Scottie Scheffler -2
@@ -776,6 +792,22 @@ E thru 12</td>
 +3 thru 13</td>
       <td class="greyout leftborder">Rory McIlroy +4
 +3 thru 12</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">3</td>
+      <td>Patrick Cantlay -1
++1 thru 14</td>
+      <td>Daniel Berger E
++1 thru 4</td>
+      <td>Jon Rahm +1
+-1 thru 14</td>
+      <td>Justin Thomas(W) +3
+-1 thru 2</td>
+      <td class="greyout leftborder">Viktor Hovland +3
++3 thru 13</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 13</td>
     </tr>
@@ -796,22 +828,6 @@ E thru 12</td>
 +4 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">3</td>
-      <td>Patrick Cantlay -1
-+1 thru 14</td>
-      <td>Hideki Matsuyama -1
--1 thru 2</td>
-      <td>Jon Rahm(W) +2
-E thru 13</td>
-      <td>Brooks Koepka +3
-E thru 12</td>
-      <td class="greyout leftborder">Justin Thomas +3
--1 thru 2</td>
-      <td class="greyout">Jordan Spieth +4
-+2 thru 13</td>
-    </tr>
-    <tr>
       <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">3</td>
       <td>Tiger Woods(W) E
@@ -828,36 +844,36 @@ E thru 12</td>
 +3 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">4</td>
-      <td>Patrick Cantlay -1
-+1 thru 14</td>
-      <td>Daniel Berger E
-+1 thru 4</td>
-      <td>Jon Rahm +2
-E thru 13</td>
-      <td>Justin Thomas(W) +3
--1 thru 2</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-+3 thru 13</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 13</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jabby</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">3</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Will Zalatoris E
 +1 thru 14</td>
-      <td>Jon Rahm +2
-E thru 13</td>
+      <td>Jon Rahm +1
+-1 thru 14</td>
       <td>Justin Thomas(W) +3
 -1 thru 2</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 12</td>
       <td class="greyout">Rory McIlroy +4
 +3 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glitter Girl</td>
+      <td class="bigbold">4</td>
+      <td>Cameron Smith -3
++1 thru 3</td>
+      <td>Jon Rahm(W) +1
+-1 thru 14</td>
+      <td>Viktor Hovland +3
++3 thru 13</td>
+      <td>Bubba Watson +3
++2 thru 17</td>
+      <td class="greyout leftborder">Rory McIlroy +4
++3 thru 12</td>
+      <td class="greyout">Jordan Spieth +4
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Wylie</td>
@@ -892,34 +908,34 @@ E thru 12</td>
 +4 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">5</td>
-      <td>Cameron Smith -3
-+1 thru 3</td>
-      <td>Jon Rahm(W) +2
-E thru 13</td>
-      <td>Viktor Hovland +3
-+3 thru 13</td>
-      <td>Bubba Watson +3
-+2 thru 17</td>
-      <td class="greyout leftborder">Rory McIlroy +4
-+3 thru 12</td>
-      <td class="greyout">Jordan Spieth +4
-+2 thru 13</td>
-    </tr>
-    <tr>
       <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">5</td>
       <td>Scottie Scheffler -2
 +1 thru 1</td>
-      <td>Jon Rahm(W) +2
-E thru 13</td>
+      <td>Jon Rahm(W) +1
+-1 thru 14</td>
       <td>Viktor Hovland +3
 +3 thru 13</td>
       <td>Brooks Koepka +3
 E thru 12</td>
       <td class="greyout leftborder">Jordan Spieth +4
 +2 thru 13</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">5</td>
+      <td>Scottie Scheffler -2
++1 thru 1</td>
+      <td>Jon Rahm(W) +1
+-1 thru 14</td>
+      <td>Viktor Hovland +3
++3 thru 13</td>
+      <td>Brooks Koepka +3
+E thru 12</td>
+      <td class="greyout leftborder">Rory McIlroy +4
++3 thru 12</td>
       <td class="greyout">Xander Schauffele +6
 +4 thru 13</td>
     </tr>
@@ -940,28 +956,12 @@ E thru 12</td>
 +5 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Fred Jamieson</td>
-      <td class="bigbold">6</td>
-      <td>Scottie Scheffler -2
-+1 thru 1</td>
-      <td>Jon Rahm(W) +2
-E thru 13</td>
-      <td>Viktor Hovland +3
-+3 thru 13</td>
-      <td>Brooks Koepka +3
-E thru 12</td>
-      <td class="greyout leftborder">Rory McIlroy +4
-+3 thru 12</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 13</td>
-    </tr>
-    <tr>
       <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">7</td>
+      <td class="bigbold">6</td>
       <td>Patrick Cantlay(W) -1
 +1 thru 14</td>
-      <td>Jon Rahm +2
-E thru 13</td>
+      <td>Jon Rahm +1
+-1 thru 14</td>
       <td>Brooks Koepka +3
 E thru 12</td>
       <td>Justin Thomas +3
@@ -973,11 +973,11 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">7</td>
       <td>Will Zalatoris E
 +1 thru 14</td>
-      <td>Jon Rahm +2
-E thru 13</td>
+      <td>Jon Rahm +1
+-1 thru 14</td>
       <td>Justin Thomas(W) +3
 -1 thru 2</td>
       <td>Viktor Hovland +3
@@ -989,11 +989,11 @@ E thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">7</td>
       <td>Collin Morikawa E
 -1 thru 14</td>
-      <td>Jon Rahm +2
-E thru 13</td>
+      <td>Jon Rahm +1
+-1 thru 14</td>
       <td>Viktor Hovland(W) +3
 +3 thru 13</td>
       <td>Brooks Koepka +3
@@ -1005,11 +1005,11 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Brian McDonald</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">7</td>
       <td>Corey Conners -1
 +1 (F)</td>
-      <td>Jon Rahm(W) +2
-E thru 13</td>
+      <td>Jon Rahm(W) +1
+-1 thru 14</td>
       <td>Justin Thomas +3
 -1 thru 2</td>
       <td>Rory McIlroy +4
@@ -1021,11 +1021,11 @@ E thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">7</td>
       <td>Will Zalatoris E
 +1 thru 14</td>
-      <td>Jon Rahm(W) +2
-E thru 13</td>
+      <td>Jon Rahm(W) +1
+-1 thru 14</td>
       <td>Viktor Hovland +3
 +3 thru 13</td>
       <td>Brooks Koepka +3
@@ -1053,9 +1053,9 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Tony Muir</td>
-      <td class="bigbold">11</td>
-      <td>Jon Rahm(W) +2
-E thru 13</td>
+      <td class="bigbold">10</td>
+      <td>Jon Rahm(W) +1
+-1 thru 14</td>
       <td>Viktor Hovland +3
 +3 thru 13</td>
       <td>Brooks Koepka +3
@@ -1069,9 +1069,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Yellow in Augusta</td>
-      <td class="bigbold">11</td>
-      <td>Jon Rahm +2
-E thru 13</td>
+      <td class="bigbold">10</td>
+      <td>Jon Rahm +1
+-1 thru 14</td>
       <td>Justin Thomas(W) +3
 -1 thru 2</td>
       <td>Viktor Hovland +3
@@ -1085,9 +1085,9 @@ E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
-      <td class="bigbold">12</td>
-      <td>Jon Rahm +2
-E thru 13</td>
+      <td class="bigbold">11</td>
+      <td>Jon Rahm +1
+-1 thru 14</td>
       <td>Justin Thomas(W) +3
 -1 thru 2</td>
       <td>Viktor Hovland +3
