--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:34:24 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 2:35:07 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -332,22 +332,6 @@ E thru 5</td>
 +3 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith -3
-+1 thru 3</td>
-      <td>Corey Conners -1
-+1 (F)</td>
-      <td>Tiger Woods E
-+1 thru 2</td>
-      <td>Jon Rahm(W) +1
--1 thru 14</td>
-      <td class="greyout leftborder">Sam Burns +5
-+2 thru 15</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 13</td>
-    </tr>
-    <tr>
       <td class="bigbold">Albert Selina</td>
       <td class="bigbold">-3</td>
       <td>Scottie Scheffler -2
@@ -460,6 +444,22 @@ E thru 12</td>
 +4 thru 13</td>
     </tr>
     <tr>
+      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith -3
++1 thru 3</td>
+      <td>Corey Conners -1
++1 (F)</td>
+      <td>Jon Rahm(W) +1
+-1 thru 14</td>
+      <td>Tiger Woods +1
++2 thru 3</td>
+      <td class="greyout leftborder">Sam Burns +5
++2 thru 15</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 13</td>
+    </tr>
+    <tr>
       <td class="bigbold">Matt Wilson</td>
       <td class="bigbold">-2</td>
       <td>Scottie Scheffler(W) -2
@@ -479,7 +479,7 @@ E thru 12</td>
       <td class="bigbold">Barb Wellard</td>
       <td class="bigbold">-2</td>
       <td>Joaquin Niemann -3
-E thru 2</td>
+E thru 3</td>
       <td>Cameron Smith -3
 +1 thru 3</td>
       <td>Jon Rahm(W) +1
@@ -572,26 +572,10 @@ E thru 12</td>
 +4 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-1</td>
-      <td>Cameron Smith -3
-+1 thru 3</td>
-      <td>Hideki Matsuyama -1
--1 thru 2</td>
-      <td>Tiger Woods E
-+1 thru 2</td>
-      <td>Justin Thomas +3
--1 thru 2</td>
-      <td class="greyout leftborder">Rory McIlroy(W) +4
-+3 thru 12</td>
-      <td class="greyout">Xander Schauffele +6
-+4 thru 13</td>
-    </tr>
-    <tr>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">-1</td>
       <td>Joaquin Niemann -3
-E thru 2</td>
+E thru 3</td>
       <td>Corey Conners -1
 +1 (F)</td>
       <td>Shane Lowry(W) +1
@@ -666,6 +650,22 @@ E thru 5</td>
 +3 thru 13</td>
       <td class="greyout">Brooks Koepka +3
 E thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">0</td>
+      <td>Cameron Smith -3
++1 thru 3</td>
+      <td>Hideki Matsuyama -1
+-1 thru 2</td>
+      <td>Tiger Woods +1
++2 thru 3</td>
+      <td>Justin Thomas +3
+-1 thru 2</td>
+      <td class="greyout leftborder">Rory McIlroy(W) +4
++3 thru 12</td>
+      <td class="greyout">Xander Schauffele +6
++4 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Lorette Hosegood</td>
@@ -828,22 +828,6 @@ E thru 12</td>
 +4 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">3</td>
-      <td>Tiger Woods(W) E
-+1 thru 2</td>
-      <td>Collin Morikawa E
--1 thru 14</td>
-      <td>Will Zalatoris E
-+1 thru 14</td>
-      <td>Viktor Hovland +3
-+3 thru 13</td>
-      <td class="greyout leftborder">Justin Thomas +3
--1 thru 2</td>
-      <td class="greyout">Rory McIlroy +4
-+3 thru 12</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jabby</td>
       <td class="bigbold">3</td>
       <td>Corey Conners -1
@@ -856,6 +840,22 @@ E thru 12</td>
 -1 thru 2</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 12</td>
+      <td class="greyout">Rory McIlroy +4
++3 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">4</td>
+      <td>Collin Morikawa E
+-1 thru 14</td>
+      <td>Will Zalatoris E
++1 thru 14</td>
+      <td>Tiger Woods(W) +1
++2 thru 3</td>
+      <td>Viktor Hovland +3
++3 thru 13</td>
+      <td class="greyout leftborder">Justin Thomas +3
+-1 thru 2</td>
       <td class="greyout">Rory McIlroy +4
 +3 thru 12</td>
     </tr>
@@ -940,22 +940,6 @@ E thru 12</td>
 +4 thru 13</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">6</td>
-      <td>Collin Morikawa(W) E
--1 thru 14</td>
-      <td>Tiger Woods E
-+1 thru 2</td>
-      <td>Viktor Hovland +3
-+3 thru 13</td>
-      <td>Justin Thomas +3
--1 thru 2</td>
-      <td class="greyout leftborder">Rory McIlroy +4
-+3 thru 12</td>
-      <td class="greyout">Gary Woodland +8
-+5 (F)</td>
-    </tr>
-    <tr>
       <td class="bigbold">Hasbulla</td>
       <td class="bigbold">6</td>
       <td>Patrick Cantlay(W) -1
@@ -1002,6 +986,22 @@ E thru 12</td>
 +1 (F)</td>
       <td class="greyout">Jordan Spieth +4
 +2 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">7</td>
+      <td>Collin Morikawa(W) E
+-1 thru 14</td>
+      <td>Tiger Woods +1
++2 thru 3</td>
+      <td>Viktor Hovland +3
++3 thru 13</td>
+      <td>Justin Thomas +3
+-1 thru 2</td>
+      <td class="greyout leftborder">Rory McIlroy +4
++3 thru 12</td>
+      <td class="greyout">Gary Woodland +8
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Brian McDonald</td>
